# inventory_project

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: app_context.py  env_settings.py  main.py
src/api/: __init__.py  _app.py  _common_types.py  _decorators.py  _error_messages.py  utils.py
src/api/analytics/: _router.py  _schema.py
src/api/products/: __init__.py  _routes.py  _schemas.py
src/api/users/: _router.py  _schemas.py
src/orm/: __init__.py  _db.py
src/orm/migrations/: env.py
src/orm/migrations/versions/: 94af7107bf12_.py  f91700535c38_.py
src/orm/models/: __init__.py  _inventory.py  _product.py  _transaction.py  _user.py
src/services/: __init__.py  _base.py  _inventory.py  _product.py  _transaction.py  _user.py  exceptions.py
tests/: conftest.py  test_analytics_endpoints.py
tests/api_tests/: test_analytics_endpoints.py
tests/mock_data/: mock_inventories.py  mock_products.py  mock_transactions.py  mock_users.py
